fix collection name not showing when using collection name pipe

--- a/src/app/+haseka/tools/label-designer/label-designer.component.scss
+++ b/src/app/+haseka/tools/label-designer/label-designer.component.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: calc(100vh - 55px);
+  height: calc(100vh - 50px);
   background-color: #fff;
   min-width: 500px;
   min-height: 500px;
